--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -5,6 +5,10 @@
 @import "design-kit/display-panel";
 @import "design-kit/panel-handle";
 @import "design-kit/side-panel";
+@import "design-kit/quiz-view";
+@import "design-kit/auth-display";
+@import "design-kit/landing-page";
+@import "design-kit/difficulty-selector";
 
 // Font
 @import "fonts/roboto-font";
