--- a/src/assets/scss/design-kit/_main-hero.scss
+++ b/src/assets/scss/design-kit/_main-hero.scss
@@ -1,35 +1,79 @@
 .main-hero{
-    height: 5.6em;
-    background: rgba(193, 199, 152, 0.859);
-    border: 3px solid #ddc0d1be; 
-    border-radius: 1em;
-    margin: 0 2px 10px 2px;
 
-    .intro-paragraph{
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        text-align: center;
-        
-        p{
-            padding: 0.4em;
-            font-size: 1.1em;
-            font-weight: 700;
-            color: #373232;
+    .difficulty-selection{
+        ul{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            align-content: space-around;
+            justify-content: center;
+            padding: 0;
 
-            a{
-                text-decoration: underline;
-                color: #373232;
-
+            li{
+                list-style: none;
+                text-decoration: none;
+                color: rgba(193, 199, 152, 0.859);
+                padding: 0.25em 1.5em;
+                margin: 0 1.3em;
+                border: 3px solid rgba(193, 199, 152, 0.859);
+                border-radius: 2em;
+                font-size: 0.8em;
+                font-weight: 700;
+                transition: 0.3s ease-in-out;
+                cursor: pointer;
+                
                 &:hover{
-                    color: rgba(82, 10, 148, 0.788);
+                    background: rgba(193, 199, 152, 0.859);
+                    color: #222222;
+                }
+
+                &:active{
+                    transform: translateY(2px);
                 }
             }
 
 
+            .active{
+                background: rgba(193, 199, 152, 0.859);
+                color: #222222;
+            }
         }
-
     }
+
+    .hero-section{
+        height: 5.6em;
+        background: rgba(193, 199, 152, 0.859);
+        border: 3px solid #ddc0d1be; 
+        border-radius: 1em;
+        margin: 0 2px 10px 2px;
+        
+        .intro-paragraph{
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            text-align: center;
+            
+            p{
+                padding: 0.4em;
+                font-size: 1.1em;
+                font-weight: 700;
+                color: #373232;
+    
+                a{
+                    text-decoration: underline;
+                    color: #373232;
+    
+                    &:hover{
+                        color: rgba(82, 10, 148, 0.788);
+                    }
+                }
+    
+    
+            }
+    
+        }
+    }
+
 
 
 
